--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,12 +12,12 @@ repositories {
 }
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "org.golang.example.android"
-        minSdkVersion 15
-        targetSdkVersion 27
+        minSdkVersion 21
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
     }
@@ -26,9 +26,11 @@ android {
             minifyEnabled false
         }
     }
+
+    namespace 'org.golang.example.bind'
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:22.1.1'
-    implementation (name:'hello', ext:'aar')
+    implementation files('../libs/hello.aar')
+
 }
