--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,5 @@
+import javax.xml.namespace.QName
+
 /* Copyright 2015 The Go Authors. All rights reserved.
  *  Use of this source code is governed by a BSD-style
  *  license that can be found in the LICENSE file.
@@ -6,16 +8,17 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'com.android.tools.build:gradle:8.0.0'
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
+
